Fix footer spacing at the bottom - less margin with copyright

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -41,7 +41,7 @@ $button-hover-color: $white-ter
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
-  padding: 3rem 0rem 2rem
+  padding: 3rem 0rem 1rem
   background-color: transparent
   .copyright
     text-align: center;
